tests/legacytokens.svx
; pos=fail error=2 warn=17

; Test "No blank between token and number" warning, new in 1.4.11.
*fix2 reference0 0 0
*data normal from to direction compass clino tape
0 1 F- DOWN1.00
1 2 F - D1.00
3 2 F - UP1.00
4 3 F - U1.00
5 4 F - +V1.00
5 6 F - -V1.00
6 7 F000 LEVEL1.00
7 8 F - D+1.00
*data normal from to tape clino compass
8 9 1.00 DOWN-
10 9 1.00 UP-
*data normal clino from direction to tape compass
DOWN11 F 10 1.00 -
DOWN_12 F 11 1.00 -
; Check we report "corrections2" as the unknown command name.
*corrections2 3.00 
*declination auto0 0 0
